--- a/employee-information-csharp-app.csproj
+++ b/employee-information-csharp-app.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>employee_information_csharp_app</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="PuppeteerSharp" Version="20.0.0" />
+  </ItemGroup>
+
 </Project>
